# SimSolve

./: .gitignore  CMakeLists.txt  README.md  SimSolve.kdev4
cmake/: ExternalLibrary.cmake  FindUnits.cmake
examples/: test1.sims  test1.ss  test10.sims  test11.sims  test2.ss  test3.sims  test3.ss  test4.sims  test4.ss  test5.sims  test5.ss  test6.sims  test6.ss  test7.sims  test7.ss  test8.sims  test9.sims
external_libraries/: CMakeLists.txt  extlib_common.hpp  testlib.cpp  testlib.hpp
src/: CMakeLists.txt  equation.cpp  equation.hpp  main.cpp  parameter.cpp  parameter.hpp  solve.cpp  system.cpp  system.hpp  utils.cpp  utils.hpp
